fix intro section on mobile

--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -21,6 +21,10 @@
         align-items: center;
         justify-content: center;
 
+        @include media-mobile {
+            display: none;
+        }
+
     }
 
     > .intro-block__main {
